; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_crlf.c_crlf_check.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_crlf.c_crlf_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crlf_attrs = type { i64 }

@GIT_CRLF_BINARY = common dso_local global i64 0, align 8
@GIT_PASSTHROUGH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i32*, i8**)* @crlf_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @crlf_check(i32* %0, i8** %1, i32* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca %struct.crlf_attrs, align 8
  store i32* %0, i32** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8** %3, i8*** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @GIT_UNUSED(i32* %11)
  %13 = load i8**, i8*** %9, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @convert_attrs(%struct.crlf_attrs* %10, i8** %13, i32* %14)
  %16 = getelementptr inbounds %struct.crlf_attrs, %struct.crlf_attrs* %10, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @GIT_CRLF_BINARY, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* @GIT_PASSTHROUGH, align 4
  store i32 %21, i32* %5, align 4
  br label %31

22:                                               ; preds = %4
  %23 = call i8* @git__malloc(i32 8)
  %24 = load i8**, i8*** %7, align 8
  store i8* %23, i8** %24, align 8
  %25 = load i8**, i8*** %7, align 8
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @GIT_ERROR_CHECK_ALLOC(i8* %26)
  %28 = load i8**, i8*** %7, align 8
  %29 = load i8*, i8** %28, align 8
  %30 = call i32 @memcpy(i8* %29, %struct.crlf_attrs* %10, i32 8)
  store i32 0, i32* %5, align 4
  br label %31

31:                                               ; preds = %22, %20
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @GIT_UNUSED(i32*) #1

declare dso_local i32 @convert_attrs(%struct.crlf_attrs*, i8**, i32*) #1

declare dso_local i8* @git__malloc(i32) #1

declare dso_local i32 @GIT_ERROR_CHECK_ALLOC(i8*) #1

declare dso_local i32 @memcpy(i8*, %struct.crlf_attrs*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
